# SmartSched

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md
ai-engine/: README.md  requirements.txt
ai-engine/config/: settings.py
ai-engine/src/: __init__.py  api.py  models.py  optimization_engine.py
ai-engine/src/optimization/: __init__.py  base_optimizer.py  csp_optimizer.py  genetic_optimizer.py  ilp_optimizer.py
ai-engine/src/utils/: data_converter.py
attached_assets/: SIH Problem Statement Details_1757931478292.txt  SIH Problem Statement Details_1757933607736.txt
client/src/: App.tsx  index.css
client/src/components/dashboard/: quick-actions.tsx  recent-activity.tsx  stats-cards.tsx
client/src/components/layout/: sidebar.tsx  top-header.tsx
client/src/components/timetable/: conflict-modal.tsx  timetable-grid.tsx
client/src/contexts/: auth-context.tsx
client/src/lib/: auth.ts  export-utils.ts
client/src/pages/: admin-dashboard.tsx  conflict-resolution.tsx  course-management.tsx  faculty-dashboard.tsx  faculty-management.tsx  room-management.tsx  student-dashboard.tsx  timetable-generation.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
