[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.3",
    "ortools>=9.14.6206",
    "pandas>=2.3.2",
    "pulp>=3.2.2",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "uvicorn>=0.35.0",
]
